Addition: Commands now support use of "repeat_<amount>" function